--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -23,20 +23,24 @@ items:
   - name: Flytta resurser
     href: resource-manager-tutorial-move-resources.md
   - name: Ange resursdistributionsordning
+    displayName: dependent resources, dependency
     href: resource-manager-tutorial-create-templates-with-dependent-resources.md
   - name: Använda villkor
     href: resource-manager-tutorial-use-conditions.md
   - name: Integrera Key Vault
+    displayName: secrets
     href: resource-manager-tutorial-use-key-vault.md
   - name: Skapa länkade mallar
     href: resource-manager-tutorial-create-linked-templates.md
   - name: Distribuera VM-tillägg
+    displayName: virtual machine extensions
     href: resource-manager-tutorial-deploy-vm-extensions.md
   - name: Distribuera SQL-tillägg
     href: resource-manager-tutorial-deploy-sql-extensions-bacpac.md
   - name: Skydda artefakter
     href: resource-manager-tutorial-secure-artifacts.md
   - name: Använda säkra distributionsmetoder
+    displayName: azure deployment manager
     href: deployment-manager-tutorial.md
   - name: Felsöka malldistribution
     href: resource-manager-tutorial-troubleshoot.md
@@ -97,6 +101,7 @@ items:
       href: resource-group-linked-templates.md
     - name: Hantera hemligheter
       href: resource-manager-keyvault-parameter.md
+      displayname: key vault
     - name: Skapa flera instanser
       href: resource-group-create-multiple.md
     - name: Använda malltillägg
@@ -111,46 +116,47 @@ items:
       href: resource-group-template-deploy-cli.md
     - name: Distribuera – PowerShell
       href: resource-group-template-deploy.md
-    - name: Distribuera med hjälp av REST API
+    - name: Distribuera – REST API
       href: resource-group-template-deploy-rest.md
     - name: Säkra mallar med SAS-token
       items:
       - name: Använda Azure CLI
         href: resource-manager-cli-sas-token.md
-      - name: Använda PowerShell
+      - name: Använda Azure PowerShell
         href: resource-manager-powershell-sas-token.md
     - name: Distribuera till flera resursgrupper eller prenumerationer
       href: resource-manager-cross-resource-group-deployment.md
     - name: Kontinuerlig integrering med Azure DevOps Services
       href: ../vs-azure-tools-resource-groups-ci-in-vsts.md
       maintainContext: true
-  - name: Hantera resurser
+  - name: Hantera
     items:
     - name: Hantera resursgrupper
       items:
-      - name: Hantera resursgrupper – portalen
+      - name: Använda Azure-portalen
         displayName: create,list,open,delete,deploy,move,lock,tag,export
         href: manage-resource-groups-portal.md
-      - name: Hantera resursgrupper – CLI
+      - name: Använda Azure CLI
         displayName: create,list,open,delete,deploy,move,lock,tag,export
         href: manage-resource-groups-cli.md
-      - name: Hantera resursgrupper – PowerShell
+      - name: Använda Azure PowerShell
         displayName: create,list,open,delete,deploy,move,lock,tag,export
         href: manage-resource-groups-powershell.md
     - name: Hantera resurser
       items:
-      - name: Hantera resurser – portalen
+      - name: Använda Azure-portalen
         displayName: open,delete,deploy,move,lock,tag,monitor
         href: manage-resources-portal.md
-      - name: Hantera resurser – CLI
+      - name: Använda Azure CLI
         displayName: open,delete,deploy,move,lock,tag
         href: manage-resources-cli.md
-      - name: Hantera resurser – PowerShell
+      - name: Använda Azure PowerShell
         displayName: open,delete,deploy,move,lock,tag
         href: manage-resources-powershell.md
     - name: Flytta resurser
       href: resource-group-move-resources.md
-    - name: Organisera resurser med hjälp av taggar
+    - name: Organisera resurser
+      displayName: tags
       href: resource-group-using-tags.md
     - name: Lås resurser
       href: resource-group-lock-resources.md
@@ -259,9 +265,9 @@ items:
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 1483d34859135d7b50bada6c74c90d09abc2df23
-ms.sourcegitcommit: 1516779f1baffaedcd24c674ccddd3e95de844de
+ms.openlocfilehash: 061f23dd0f25fccdbcfe459dc71f998319b06d58
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/26/2019
-ms.locfileid: "56820543"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56886697"
