--- a/articles/cognitive-services/Bing-Spell-Check/toc.yml
+++ b/articles/cognitive-services/Bing-Spell-Check/toc.yml
@@ -4,45 +4,49 @@ items:
 - name: Översikt
   items:
   - name: Vad är API för stavningskontroll i Bing?
-    href: proof-text.md
+    href: overview.md
   - name: 'Jämför API: erna för Bing-sökresultat'
     href: ../Bing-Web-Search/bing-api-comparison.md
     maintainContext: true
-- name: Snabbstarter för REST API
+- name: Snabbstarter
   items:
-  - name: C#
-    href: quickstarts/csharp.md
-  - name: Java
-    href: quickstarts/java.md
-  - name: Node.js
-    href: quickstarts/nodejs.md
-  - name: PHP
-    href: quickstarts/php.md
-  - name: Python
-    href: quickstarts/python.md
-  - name: Ruby
-    href: quickstarts/ruby.md
-  expanded: true
-- name: Snabbstarter för SDK
-  items:
-  - name: Snabbstart för SDK i C#
-    href: sdk-quickstart-spell-check.md
-  - name: Översikt över SDK-exempel
-    href: sdk.md
+  - name: REST-API
+    items:
+    - name: Använd C#
+      href: quickstarts/csharp.md
+    - name: Använda Java
+      href: quickstarts/java.md
+    - name: Använda Node.js
+      href: quickstarts/nodejs.md
+    - name: Använda PHP
+      href: quickstarts/php.md
+    - name: Använda Python
+      href: quickstarts/python.md
+    - name: Använda Ruby
+      href: quickstarts/ruby.md
+    expanded: true
+  - name: SDK
+    items:
+    - name: Använd C#
+      href: sdk-quickstart-spell-check.md
 - name: Självstudier
   items:
   - name: Skapa en webbapp för stavningskontroll
     href: tutorials/spellcheck.md
-  - name: 'Källkod: webbapp för stavningskontroll'
-    href: tutorials/spellcheck-source.md
 - name: Instruktionsguider
   items:
   - name: Uppgradera från v5 till v7
     href: bing-spell-check-upgrade-guide-v5-to-v7.md
+- name: Begrepp
+  items:
+  - name: Skicka förfrågningar till API:et för stavningskontroll i Bing
+    href: concepts/sending-requests.md
+  - name: Använda API:et för stavningskontroll i Bing
+    href: concepts/using-spell-check.md
 - name: Exempel
   items:
   - name: Kodexempel
-    href: sdk.md
+    href: https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Spell+Check
 - name: Referens
   items:
   - name: Stavningskontrolls-API i Bing v7
@@ -68,8 +72,6 @@ items:
   items:
   - name: Analys för API för stavningskontroll i Bing
     href: bing-spell-check-stats.md
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: bing-spell-check-resource-faq.md
   - name: Stöd för språk och region
     href: language-support.md
   - name: Prissättning
@@ -84,9 +86,9 @@ items:
     href: https://azure.microsoft.com/services/cognitive-services/spell-check/
   - name: UserVoice
     href: https://cognitive.uservoice.com/forums/598195-bing-spell-check
-ms.openlocfilehash: a993da847ca775a18efba42a82045d450a1e9f59
-ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
+ms.openlocfilehash: 132901c3bf159054519658893f1f05438852afcb
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55512108"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56890053"
