--- a/articles/hdinsight/kafka/TOC.yml
+++ b/articles/hdinsight/kafka/TOC.yml
@@ -234,12 +234,12 @@ items:
     - name: Ansluta HDInsight till det lokala nätverket
       href: ../connect-on-premises-network.md
       maintainContext: true
-  - name: Övervakning med hjälp av Log Analytics
+  - name: Övervaka med hjälp av Azure Monitor-loggar
     items:
-    - name: Använda Azure Log Analytics
+    - name: Använda Azure Monitor-loggar
       href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
       maintainContext: true
-    - name: Använda frågor med Log Analytics
+    - name: Använda frågor med Azure Monitor-loggar
       href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
       maintainContext: true
     - name: Övervaka klusterprestanda
@@ -281,9 +281,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: c9524d96975a2eb443e3daec7122dc10ecc7e56d
-ms.sourcegitcommit: e51e940e1a0d4f6c3439ebe6674a7d0e92cdc152
+ms.openlocfilehash: 442093602bf9eb1acf79437bf0941908df7e2219
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/08/2019
-ms.locfileid: "55893638"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56887615"
