--- a/articles/hdinsight/r-server/TOC.yml
+++ b/articles/hdinsight/r-server/TOC.yml
@@ -284,12 +284,12 @@ items:
     - name: Ansluta HDInsight till det lokala nätverket
       href: ../connect-on-premises-network.md
       maintainContext: true
-  - name: Övervakning med hjälp av Log Analytics
+  - name: Övervaka med hjälp av Azure Monitor-loggar
     items:
-    - name: Använda Azure Log Analytics
+    - name: Använda Azure Monitor-loggar
       href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
       maintainContext: true
-    - name: Använda frågor med Log Analytics
+    - name: Använda frågor med Azure Monitor-loggar
       href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
       maintainContext: true
     - name: Övervaka klusterprestanda
@@ -342,9 +342,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 95075606f4a992d8c19a6a556f8dfa6c71cc6606
-ms.sourcegitcommit: d2329d88f5ecabbe3e6da8a820faba9b26cb8a02
+ms.openlocfilehash: 7c80f3ef28f4e0f47e03d79865f93a0aa9e6e716
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/16/2019
-ms.locfileid: "56328324"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56889825"
