--- a/articles/hdinsight/storm/TOC.yml
+++ b/articles/hdinsight/storm/TOC.yml
@@ -239,12 +239,12 @@ items:
     - name: Ansluta HDInsight till det lokala nätverket
       href: ../connect-on-premises-network.md
       maintainContext: true
-  - name: Övervakning med hjälp av Log Analytics
+  - name: Övervaka med hjälp av Azure Monitor-loggar
     items:
-    - name: Använda Azure Log Analytics
+    - name: Använda Azure Monitor-loggar
       href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
       maintainContext: true
-    - name: Använda frågor med Log Analytics
+    - name: Använda frågor med Azure Monitor-loggar
       href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
       maintainContext: true
     - name: Övervaka klusterprestanda
@@ -318,9 +318,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 2e6e05ac149308339c8d663fe96287dbc476579d
-ms.sourcegitcommit: d2329d88f5ecabbe3e6da8a820faba9b26cb8a02
+ms.openlocfilehash: ea149749fcb073861cb6af05225536c552e3f79a
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/16/2019
-ms.locfileid: "56327178"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56886493"
