--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -3,7 +3,7 @@ items:
   href: index.yml
 - name: Översikt
   items:
-  - name: Azure DB för PostgreSQL
+  - name: Vad är Azure DB for PostgreSQL?
     href: overview.md
 - name: Snabbstarter
   items:
@@ -37,7 +37,8 @@ items:
     - name: Azure CLI
       href: tutorial-design-database-using-azure-cli.md
   - name: '2 – Utforma webbapp: Python'
-    href: ../app-service/containers/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
+    href: ../app-service/containers/tutorial-python-postgresql-app.md
+    maintainContext: true
   - name: 3 – Övervaka och finjustera
     href: tutorial-monitor-and-tune.md
 - name: Exempel
@@ -236,9 +237,9 @@ items:
     href: partners-migration-postgresql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: e391ae71e7b840fc372f9b6116bab486845f92e6
-ms.sourcegitcommit: ba035bfe9fab85dd1e6134a98af1ad7cf6891033
+ms.openlocfilehash: 4c10bd629542aa445ccea46df404df8c0db94c1c
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "55567238"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56887581"
