--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -47,12 +47,12 @@ items:
   - name: Replikering av Apache HBase-kluster i ett virtuellt Azure-nätverk
     href: ../hbase/apache-hbase-replication.md
     maintainContext: true
-- name: Övervakning med hjälp av Log Analytics
+- name: Övervaka med hjälp av Azure Monitor-loggar
   items:
-  - name: Använda Azure Log Analytics
+  - name: Använda Azure Monitor-loggar
     href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
     maintainContext: true
-  - name: Använda frågor med Log Analytics
+  - name: Använda frågor med Azure Monitor-loggar
     href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
     maintainContext: true
   - name: Övervaka klusterprestanda
@@ -103,9 +103,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 98324ce4510b40d21013198efd48f4dcb04a9c18
-ms.sourcegitcommit: d2329d88f5ecabbe3e6da8a820faba9b26cb8a02
+ms.openlocfilehash: a7e4c066ed79d71a60f01ccba6d7608fefdd3440
+ms.sourcegitcommit: 24906eb0a6621dfa470cb052a800c4d4fae02787
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/16/2019
-ms.locfileid: "56325831"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56886340"
