--- a/articles/cognitive-services/Bing-Autosuggest/toc.yml
+++ b/articles/cognitive-services/Bing-Autosuggest/toc.yml
@@ -27,8 +27,6 @@ items:
   items:
   - name: Enkelsidig webbapp
     href: tutorials/autosuggest.md
-  - name: Enkelsidig webbapp (källkod)
-    href: tutorials/autosuggest-source.md
 - name: Instruktionsguider
   items:
   - name: Uppgradera från v5 till v7
@@ -37,6 +35,8 @@ items:
   items:
   - name: Föreslå frågeord
     href: concepts/get-suggestions.md
+  - name: Skicka förfrågningar
+    href: concepts/sending-requests.md
 - name: Referens
   items:
   - name: API för automatiska förslag i Bing v7
@@ -56,8 +56,6 @@ items:
     maintainContext: true
 - name: Resurser
   items:
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: bing-autosuggest-resource-faq.md
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/cognitive-services/autosuggest-api/
   - name: UserVoice
@@ -74,15 +72,13 @@ items:
     href: https://azure.microsoft.com/try/cognitive-services/?api=autosuggest-api
   - name: Prova!
     href: https://azure.microsoft.com/services/cognitive-services/autosuggest/
-  - name: Slutpunkt för Automatiska förslag i Bing
-    href: autosuggest-endpoint.md
   - name: Stöd för språk och region
     href: language-support.md
   - name: Analys för API för automatiska förslag i Bing
     href: bing-autosuggest-stats.md
-ms.openlocfilehash: 19443b5bf95bd2e9aa982c53612297a63f4110b8
-ms.sourcegitcommit: f715dcc29873aeae40110a1803294a122dfb4c6a
+ms.openlocfilehash: 5e0a0f0734b694a098cc6685e337aa24b41962d5
+ms.sourcegitcommit: 15e9613e9e32288e174241efdb365fa0b12ec2ac
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/14/2019
-ms.locfileid: "56269795"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "57011542"
