--- a/articles/lab-services/index.yml
+++ b/articles/lab-services/index.yml
@@ -1,12 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 6b15db6bc4e5d868080cb2949e34b62fd8033854
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
+ms.openlocfilehash: eec0d8284163811354edd14b2b1b6b3ea8e12af4
+ms.sourcegitcommit: fdd6a2927976f99137bb0fcd571975ff42b2cac0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56726184"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56960130"
 documentType: LandingData
-title: Förhandsversion av Azure Lab Services och dokumentation om Azure DevTest Labs
+title: Dokumentation om Azure Lab Services och Azure DevTest Labs
 metadata:
   title: Dokumentation för Azure Lab Services – självstudier, API-referens | Microsoft Docs
   description: Lär dig hur du använder Azure Lab Services för att snabbt konfigurera ett labb för utveckling, testning, hackathon eller ett klassrumslabb för ditt team eller dina studenter i molnet. Självstudier för Azure, exempel och mycket mer visar hur du skapar, hanterar och skyddar labb.
