--- a/articles/machine-learning/studio/index.yml
+++ b/articles/machine-learning/studio/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b8ce62533af1cf8f921a8a8eafb8e781821c2604
-ms.sourcegitcommit: de81b3fe220562a25c1aa74ff3aa9bdc214ddd65
+ms.openlocfilehash: 4428bf710df5eae3b06c8abd38eb85d6128a574d
+ms.sourcegitcommit: fdd6a2927976f99137bb0fcd571975ff42b2cac0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "56233820"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "56959433"
 documentType: LandingData
 title: Dokumentation om Machine Learning Studio
 metadata:
@@ -18,21 +18,10 @@ metadata:
   ms.author: jmartens
   ms.tgt_pltfrm: na
   ms.devlang: na
-  ms.date: 01/24/2019
+  ms.date: 02/24/2019
 abstract:
   description: Azure Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Läs mer om hur du kommer igång med att använda Machine Learning Studio:'
-  - type: list
-    style: unordered
-    items:
-    - html: <a href="create-experiment">Skapa ditt första Studio-experiment</a>
-    - html: <a href="algorithm-choice">Välja den bästa algoritmen</a>
-    - html: <a href="deploy-consume-web-service-guide">Distribuera modeller av webbtjänster</a>
-    - html: <a href="data-science-for-beginners-the-5-questions-data-science-answers">Läs om Datavetenskap för nybörjare</a>
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
@@ -40,8 +29,8 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="tutorial-part1-credit-risk">Skapa och distribuera en förutsägelselösning</a>
-    - html: <a href="azure-ml-customer-churn-scenario">Kundomsättningsexempel</a>
+    - html: <a href="create-experiment">Skapa ditt första Studio-experiment</a>
+    - html: <a href="tutorial-part1-credit-risk">Skapa och distribuera en förutsägelselösning för kreditrisk</a>
 - title: Referens
   items:
   - type: list
