--- a/articles/mariadb/index.yml
+++ b/articles/mariadb/index.yml
@@ -1,21 +1,22 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: dd2f984c74dc797bb3acbaa3f74cb6c8aa2028c0
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: b1e6ffc985c35b6711b8e602dbb877e840ab3f1b
+ms.sourcegitcommit: f7f4b83996640d6fa35aea889dbf9073ba4422f0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53547838"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "56992387"
 documentType: LandingData
 title: Azure Database for MariaDB-dokumentation
 metadata:
-  title: Dokumentation om Azure MariaDB – självstudier, API-referens | Microsoft Docs
-  description: Azure Database for MariaDB är en relationsdatabastjänst baserad på MariaDB-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MariaDB och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database for MariaDB med våra snabbstarter, självstudier och exempel.
+  title: Dokumentation om Azure MariaDB – självstudier, API-referens
+  description: Azure Database for MariaDB är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare och baserad på MariaDB-databasmotorn för öppen källkod.
   author: ajlam
   ms.author: andrela
   ms.service: mariadb
   ms.topic: landing-page
-  ms.date: 12/13/2018
-  abstract: 
+  ms.date: 02/25/2018
+abstract:
+  description: Azure Database for MariaDB är en relationsdatabastjänst baserad på MariaDB-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för att hantera verksamhetskritiska arbetsbelastningar med förutsägbar prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MariaDB och använd valfria verktyg för plattform och öppen källkod. Lär dig hur du använder Azure Database for MariaDB med våra snabbstarter, självstudier och exempel.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -40,6 +41,15 @@ sections:
     style: ordered
     items:
     - html: Utforma en databas&#58; <a href="/azure/mariadb/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mariadb/tutorial-design-database-cli">Azure CLI</a>
+- title: Exempel
+  items:
+  - type: paragraph
+    text: Hitta skript för att hantera vanliga uppgifter.
+  - type: list
+    style: unordered
+    className: spaced noBullet
+    items:
+    - html: <a href="/azure/mariadb/sample-scripts-azure-cli">Azure CLI</a>
 - title: Referens
   items:
   - type: list
@@ -48,3 +58,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/cli/azure/mariadb">Azure CLI</a></p>
+    - title: REST
+      html: <p><a href="/rest/api/mariadb/">REST-API</a></p>
+    - title: Azure Resource Manager
+      html: <p><a href="/azure/templates/microsoft.dbformariadb/allversions">Resource Manager-mallar</a></p>
