--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -1,23 +1,23 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ccb64441ced792009669eb95f5311ff309c58e00
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: 4bfb09a9a0d50c3259d942bc60e0c35046a11254
+ms.sourcegitcommit: f7f4b83996640d6fa35aea889dbf9073ba4422f0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53543758"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "56989737"
 documentType: LandingData
 title: Azure Database för MySQL-dokumentation
 metadata:
   document_id: 8d915ae6-9101-ad37-0736-3eaa59c2dd34
   title: Dokumentation om Azure MYSQL – självstudier, API-referens | Microsoft Docs
-  description: Azure Database för MySQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på MySQL-databasmotorn för öppen källkod.
+  description: Azure Database for MySQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare och baserad på MySQL-databasmotorn för öppen källkod.
   author: ajlam
   ms.author: andrela
   ms.service: mysql
   ms.topic: landing-page
-  ms.date: 12/13/2018
+  ms.date: 02/25/2019
 abstract:
-  description: Azure Database för MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database för MySQL och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.
+  description: Azure Database for MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för att hantera verksamhetskritiska arbetsbelastningar med förutsägbar prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MySQL och använd valfria verktyg för plattform och öppen källkod. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -43,6 +43,15 @@ sections:
     items:
     - html: Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>
     - html: Skapa en webbapp&#58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>
+- title: Exempel
+  items:
+  - type: paragraph
+    text: Hitta skript för att hantera vanliga uppgifter.
+  - type: list
+    style: unordered
+    className: spaced noBullet
+    items:
+    - html: <a href="/azure/mysql/sample-scripts-azure-cli">Azure CLI</a>
 - title: Referens
   items:
   - type: list
@@ -51,3 +60,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/cli/azure/mysql">Azure CLI</a></p>
+    - title: REST
+      html: <p><a href="/rest/api/mysql">REST-API</a></p>
+    - title: Azure Resource Manager
+      html: <p><a href="/azure/templates/microsoft.dbformysql/allversions">Resource Manager-mallar</a></p>
