--- a/articles/postgresql/index.yml
+++ b/articles/postgresql/index.yml
@@ -1,23 +1,23 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: c9c717540e0ca71b0dcd2b82fa29240bffd5e40b
-ms.sourcegitcommit: 71ee622bdba6e24db4d7ce92107b1ef1a4fa2600
+ms.openlocfilehash: 9fb6f65c05f6789177923a3e62e8978bb5cdf457
+ms.sourcegitcommit: f7f4b83996640d6fa35aea889dbf9073ba4422f0
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/17/2018
-ms.locfileid: "53547124"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "56992115"
 documentType: LandingData
 title: Azure Database för PostgreSQL-dokumentation
 metadata:
   document_id: c0fe8cd3-35da-e3e5-718e-8f3cf2f87f34
   title: Dokumentation om Azure PostgreSQL – självstudier, API-referens
-  description: Azure Database för PostgreSQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på PostgreSQL-databasmotorn för öppen källkod.
+  description: Azure Database for PostgreSQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på PostgreSQL-databasmotorn för öppen källkod.
   author: rachel-msft
   ms.author: raagyema
   ms.service: postgresql
   ms.topic: landing-page
-  ms.date: 11/30/2018
+  ms.date: 02/25/2019
 abstract:
-  description: Azure Database för PostgreSQL är en relationsdatabastjänst baserad på Postgres-databasmotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritiska arbetsbelastningar med förutsägbara prestanda, säkerhet, hög tillgänglighet och dynamisk skalbarhet.  Utveckla program med Azure Database för PostgreSQL och använd valfria verktyg för öppen källkod och plattform.  Lär dig hur du använder Azure Database med våra snabbstarter, självstudier och exempel.
+  description: Azure Database for PostgreSQL är en relationsdatabastjänst baserad på Postgres-databasmotorn med öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för hantering av verksamhetskritiska arbetsbelastningar med förutsägbar prestanda, säkerhet, hög tillgänglighet och dynamisk skalbarhet.  Utveckla program med Azure Database for PostgreSQL och använd valfria verktyg och plattform med öppen källkod.  Lär dig hur du använder Azure Database med våra snabbstarter, självstudier och exempel.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -43,6 +43,7 @@ sections:
     items:
     - html: Utforma en databas&#58; <a href="/azure/postgresql/tutorial-design-database-using-azure-portal">Azure Portal</a> | <a href="/azure/postgresql/tutorial-design-database-using-azure-cli">Azure CLI</a>
     - html: <a href="/azure/app-service/containers/tutorial-python-postgresql-app?toc=%2fazure%2fpostgresql%2ftoc.json">Skapa en webbapp med Python och CLI</a>
+    - html: <a href="/azure/postgresql/tutorial-monitor-and-tune">Övervaka och finjustera tjänsten</a>
 - title: Utveckla dina färdigheter med Microsoft Learn
   items:
   - type: list
@@ -72,6 +73,8 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/cli/azure">Azure CLI</a></p>
+      html: <p><a href="/cli/azure/postgres">Azure CLI</a></p>
     - title: REST
       html: <p><a href="/rest/api/postgresql">REST-API</a></p>
+    - title: Azure Resource Manager
+      html: <p><a href="/azure/templates/microsoft.dbforpostgresql/allversions">Resource Manager-mallar</a></p>
