--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -149,6 +149,30 @@ items:
       href: https://docs.microsoft.com/javascript/api/azure-maps-rest/
   - name: Resource Manager-mall
     href: /azure/templates/microsoft.maps/accounts
+- name: Resurser
+  items:
+  - name: Användningsvillkor för Azure Maps
+    href: http://www.microsoftvolumelicensing.com/DocumentSearch.aspx?Mode=3&DocumentTypeId=31.
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/azure-maps
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/azure-maps
+  - name: MSDN-forum
+    href: https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelbs
+  - name: Ordlista
+    href: glossary.md
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates
+  - name: Azure IoT Developer Center
+    href: https://azure.microsoft.com/develop/iot/
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=iot
+  - name: Tekniska fallstudier
+    href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
+  - name: Videoklipp
+    href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
 - name: Relaterat
   items:
   - name: Lösningar
@@ -175,31 +199,9 @@ items:
       href: /azure/iot-edge
     - name: SDK:er för IoT-enheter
       href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
-- name: Resurser
-  items:
-  - name: Azure IoT Developer Center
-    href: https://azure.microsoft.com/develop/iot/
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Ordlista
-    href: glossary.md
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelbs
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/azure-maps
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-maps
-  - name: Tekniska fallstudier
-    href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
-  - name: Videoklipp
-    href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
-ms.openlocfilehash: 114647e85aa775d37dab827daef2e55867e5a47b
-ms.sourcegitcommit: de81b3fe220562a25c1aa74ff3aa9bdc214ddd65
+ms.openlocfilehash: 194b8ff59a19e33a3ec8e2544e4d04c9afb6613f
+ms.sourcegitcommit: ad019f9b57c7f99652ee665b25b8fef5cd54054d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "56234399"
+ms.lasthandoff: 03/02/2019
+ms.locfileid: "57246450"
