--- a/articles/iot-central/TOC.yml
+++ b/articles/iot-central/TOC.yml
@@ -105,10 +105,12 @@ items:
       href: howto-manage-iot-central-from-powershell.md
     - name: Skapa och hantera ett program som molnlösningsleverantör
       href: howto-create-and-manage-applications-as-CSP.md
-    - name: Konfigurera startsidan
+    - name: Konfigurera instrumentpanelen för program
       href: howto-configure-homepage.md
   - name: Personanpassning
     items:
+    - name: Skapa personliga instrumentpaneler
+      href: howto-personalize-dashboard.md
     - name: Hantera dina inställningar
       href: howto-manage-preferences.md
 - name: Relaterat
@@ -143,9 +145,9 @@ items:
     href: iot-central-customer-data-requests.md
   - name: Webbläsare som stöds
     href: iot-central-supported-browsers.md
-ms.openlocfilehash: 95702f9255bfe02aec5c5770d06021aa3b28148c
-ms.sourcegitcommit: 7f7c2fe58c6cd3ba4fd2280e79dfa4f235c55ac8
+ms.openlocfilehash: 4843570f131b06657df1770060b95622fde43cc0
+ms.sourcegitcommit: c712cb5c80bed4b5801be214788770b66bf7a009
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/25/2019
-ms.locfileid: "56806886"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57216823"
