--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -686,9 +686,9 @@ items:
         href: service-fabric-diagnostics-oms-containers.md
     - name: Övervaka kluster
       items:
-      - name: Konfigurera Log Analytics för att samla in klusterhändelser
+      - name: Konfigurera Azure Monitor-loggar för att samla in klusterhändelser
         href: service-fabric-diagnostics-oms-setup.md
-      - name: Övervaka ditt kluster med Log Analytics
+      - name: Övervaka ditt kluster med Azure Monitor-loggar
         href: service-fabric-diagnostics-event-analysis-oms.md
       - name: Fråga EventStore-API:er
         href: service-fabric-diagnostics-eventstore-query.md
@@ -837,9 +837,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: 2478cb35cb0981848009febe382fddf3371887ce
-ms.sourcegitcommit: 1516779f1baffaedcd24c674ccddd3e95de844de
+ms.openlocfilehash: bceb61a6c5d5105d09d1b2ec94b394fd25402ea6
+ms.sourcegitcommit: ad019f9b57c7f99652ee665b25b8fef5cd54054d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/26/2019
-ms.locfileid: "56823390"
+ms.lasthandoff: 03/02/2019
+ms.locfileid: "57241824"
