--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -122,8 +122,6 @@ items:
     - name: Hantera Azure Automation-data
       displayName: backup
       href: automation-managing-data.md
-    - name: Hantera Python 2-paket
-      href: python-packages.md
     - name: Läs mer om PowerShell-arbetsflödet
       href: automation-powershell-workflow.md
     - name: Underordnade Runbooks
@@ -177,16 +175,18 @@ items:
       href: automation-dsc-diagnostics.md
   - name: Hantera delade resurser
     items:
-    - name: Certifikat
-      href: automation-certificates.md
-    - name: Anslutningar
-      href: automation-connections.md
-    - name: Autentiseringsuppgifter
-      href: automation-credentials.md
-    - name: Integreringsmoduler
-      href: automation-integration-modules.md
     - name: Scheman
       href: automation-schedules.md
+    - name: Moduler
+      href: shared-resources/modules.md
+    - name: Hantera Python 2-paket
+      href: python-packages.md
+    - name: Autentiseringsuppgifter
+      href: automation-credentials.md
+    - name: Anslutningar
+      href: automation-connections.md
+    - name: Certifikat
+      href: automation-certificates.md
     - name: Variabler
       href: automation-variables.md
     - name: Uppdatera Azure PowerShell-moduler
@@ -287,9 +287,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-automation
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=automation
-ms.openlocfilehash: b4499b2a09dc8ac330582e2f42f5d683a89790c5
-ms.sourcegitcommit: 1902adaa68c660bdaac46878ce2dec5473d29275
+ms.openlocfilehash: 68b40786eefb7cb1abfb32e5042c07f6a1b5314d
+ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/11/2019
-ms.locfileid: "57730739"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "57840536"
